Refactored fragment communications.